--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<section class="card wow fadeIn" id="intro">
 		<div class="card-body text-white text-center py-5 px-5 my-5">
-			<img class="mb-4" src="assets/img/svg/disen_bygg.svg" />
+			<img src="assets/img/svg/disen_bygg.svg" style="width:100%;height:auto;" />
 		</div>
 	</section>
 </div>
