--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,10 @@
-<footer class="page-footer text-center font-small mdb-color darken-2 mt-4 wow fadeIn">
-    <div class="py-4">
-        <a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank">
-            <i class="fab fa-facebook-f mr-3"></i>
-        </a>
-
-        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
-            <i class="fab fa-twitter mr-3"></i>
+<footer class="page-footer text-center font-small mt-4 wow fadeIn">
+    <div class="py-4 white">
+        <a>
+            <img src="assets/img/svg/byggmester.svg" style="height: 48px" />
         </a>
     </div>
-    <div class="footer-copyright py-3">
+    <div class="footer-copyright py-3 mdb-color darken-4 text-white">
         &copy; 20{{ site.time | date: '%y' }} {{ site.legalName }} | Org.nr {{ site.orgNr }}
     </div>
 </footer>
