--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,13 +1,9 @@
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
     <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="assets/js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
     <script type="text/javascript" src="assets/js/mdb.min.js"></script>
-    <!-- Initializations -->
+    <script type="text/javascript" src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/icons.js"></script>
     <script type="text/javascript">
         // Animations initialization
         new WOW().init();
