--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,24 +1,15 @@
-    <!--Main Navigation-->
     <header>
-
-        <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark white orange darken-4 scrolling-navbar">
             <div class="container">
-
-                <!-- Brand -->
                 <a class="navbar-brand waves-effect" href="#page-top">
-					<img src="assets/img/svg/disen_bygg.svg" height="48px"/>
+                    <i class="fac fa-disen-bygg" style="height: 48px"></i>
                 </a>
-
-                <!-- Collapse -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <!-- Links -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
                     <ul class="navbar-nav ml-auto">
 						<li class="nav-item">
                             <a class="nav-link waves-effect" href="#about">Om oss</a>
@@ -30,12 +21,7 @@
                             <a class="nav-link waves-effect" href="#contact">Kontakt</a>
                         </li>
                     </ul>
-
                 </div>
-
             </div>
         </nav>
-        <!-- Navbar -->
-
     </header>
-    <!--Main Navigation-->
