--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,14 @@
-<div class="container">
-	<section class="pt-5" id="about">
-		<div class="wow fadeIn">
-			<h2 class="h2 text-center mb-5">Om oss</h2>
-			<p class="text-center">{{ site.description }}</p>
-		</div>
-	</section>
+<div class="mdb-color darken-4 text-white">
+    <div class="container">
+        <section class="pt-5" id="about">
+                <div class="row mt-3 wow fadeIn">
+                    <div class="col-lg-12 mb-4">
+				        <h3 class="h3 text-center">Om oss</h3>
+			         </div>
+                    <div class="col-lg-12 mb-4">
+				        <p class="text-center">{{ site.description }}</p>
+			         </div>
+                </div>
+        </section>
+    </div>
 </div>
