--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,11 @@
-<div class="container">
-	<section class="pt-5" id="contact">
-		<div class="row mt-3 wow fadeIn">
-			<div class="col-lg-12 mb-4">
-				<h3 class="h3 text-center mb-4">Kontakt</h3>
-			</div>
-		</div>
-	</section>
+<div class="mdb-color darken-4 text-white">
+    <div class="container">
+        <section class="pt-5" id="contact">
+            <div class="row mt-3 wow fadeIn">
+                <div class="col-lg-12 mb-4">
+                    <h3 class="h3 text-center mb-4">Kontakt</h3>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
