--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,11 @@
-<div class="container">
-	<section class="pt-5" id="projects">
-		<div class="row mt-3 wow fadeIn">
-			<div class="col-lg-12 mb-4">
-				<h2 class="h2 text-center mb-4">Prosjekter</h2>
-			</div>
-		</div>
-	</section>
+<div class="white">
+    <div class="container">
+        <section class="pt-5" id="projects">
+            <div class="row mt-3 wow fadeIn">
+                <div class="col-lg-12 mb-4">
+                    <h2 class="h2 text-center mb-4">Prosjekter</h2>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
