--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
     {% include head.html %}
-    <body id="page-top" class="index">
+    <body id="page-top" class="mdb-color darken-4">
     {% include nav.html %}
 	{% include main.html %}
     {% include footer.html %}
