--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,11 @@
-<div class="mdb-color darken-4 text-white">
+<div class="container-fluid mdb-color py-4 darken-4 text-white">
     <div class="container">
-        <section class="pt-5" id="about">
-                <div class="row mt-3 wow fadeIn">
-                    <div class="col-lg-12 mb-4">
+        <section id="about">
+                <div class="row wow fadeIn">
+                    <div class="col-lg-12">
 				        <h3 class="h3 text-center">Om oss</h3>
 			         </div>
-                    <div class="col-lg-12 mb-4">
+                    <div class="col-lg-12">
 				        <p class="text-center">{{ site.description }}</p>
 			         </div>
                 </div>
