--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,31 @@
-<div class="mdb-color darken-4 text-white">
+<div class="container-fluid mdb-color py-4 darken-4 text-white">
     <div class="container">
-        <section class="pt-5" id="contact">
-            <div class="row mt-3 wow fadeIn">
-                <div class="col-lg-12 mb-4">
-                    <h3 class="h3 text-center mb-4">Kontakt</h3>
+        <section id="contact">
+            <div class="row wow fadeIn">
+                <div class="col-lg-12">
+                    <h3 class="h3 text-center">Kontakt</h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row wow fadeIn">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <a href="tel: {{ site.phone }}" style="color: white;">
+                        <i class="fas fa-phone" style="font-size: 48px;"></i>
+                    </a>
+                    <br>
+                    <p style="padding-top: 10px;">{{ site.phone }}</p>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <a href="mailto: {{ site.email }}" style="color: white;">
+                        <i class="fas fa-envelope" style="font-size: 48px;"></i>
+                    </a>
+                    <br>
+                    <p style="padding-top: 10px;">{{ site.email }}</p>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <i class="fas fa-map-marker-alt" style="font-size: 48px;"></i>
+                    <br>
+                    <p style="padding-top: 10px;">{{ site.address }}</p>
                 </div>
             </div>
         </section>
