--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,21 @@
-<footer class="page-footer text-center font-small mt-4 wow fadeIn">
-    <div class="py-4 white">
-        <a>
-            <img src="assets/img/svg/byggmester.svg" style="height: 48px" />
-        </a>
+<footer class="page-footer text-center wow fadeIn">
+    <div class="container-fluid py-4 white">
+        <div class="container">
+            <div class="row wow fadeIn">
+                <div class="col-md-6">
+                    <a>
+                        <img src="{{ '/assets/img/svg/byggmester.svg' | relative_url }}" style="height: 128px;"/>
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <a>
+                        <img src="{{ 'assets/img/svg/sg_gold.svg' | relative_url }}" style="height: 128px;"/>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="footer-copyright py-3 mdb-color darken-4 text-white">
+    <div class="footer-copyright py-3 mdb-color darken-4 font-small text-white">
         &copy; 20{{ site.time | date: '%y' }} {{ site.legalName }} | Org.nr {{ site.orgNr }}
     </div>
 </footer>
