--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,9 +1,9 @@
-    <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/popper.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/mdb.min.js"></script>
+    <script type="text/javascript" src="{{ '/assets/js/jquery-3.3.1.min.js' | relative_url }}"></script>
+    <script type="text/javascript" src="{{ '/assets/js/popper.min.js' | relative_url }}"></script>
+    <script type="text/javascript" src="{{ '/assets/js/bootstrap.min.js' |relative_url }}"></script>
+    <script type="text/javascript" src="{{ '/assets/js/mdb.min.js' | relative_url }}"></script>
     <script type="text/javascript" src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/icons.js"></script>
+    <script type="text/javascript" src="{{ '/assets/js/icons.js' | relative_url }}"></script>
     <script type="text/javascript">
         // Animations initialization
         new WOW().init();
