--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,10 +1,28 @@
-<div class="white">
+<div class="container-fluid py-4 white">
     <div class="container">
-        <section class="pt-5" id="projects">
-            <div class="row mt-3 wow fadeIn">
-                <div class="col-lg-12 mb-4">
-                    <h2 class="h2 text-center mb-4">Prosjekter</h2>
+        <section id="projects">
+            <div class="row wow fadeIn">
+                <div class="col-lg-12">
+                    <h2 class="h2 text-center">Prosjekter</h2>
                 </div>
+            </div>
+            <div class="row wow fadeIn">
+                {% for post in site.posts %}
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="{{ post.cardImg }}">
+                            <a href="{{ post.url }}">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title"><strong>{{ post.title }}</strong></h4>
+                            <p class="card-text">{{ post.description }}</p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </section>
     </div>
