--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
 				        <h3 class="h3 text-center">Om oss</h3>
 			         </div>
                     <div class="col-lg-12">
-				        <p class="text-center">{{ site.description }}</p>
+				        <p class="text-center">{{ content }}</p>
 			         </div>
                 </div>
         </section>
