--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,14 +2,19 @@
     <div class="container-fluid py-4 white">
         <div class="container">
             <div class="row wow fadeIn">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <a>
-                        <img src="{{ '/assets/img/svg/byggmester.svg' | relative_url }}" style="height: 128px;"/>
+                        <img src="{{ '/assets/img/svg/byggmester.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <a>
-                        <img src="{{ 'assets/img/svg/sg_gold.svg' | relative_url }}" style="height: 128px;"/>
+                        <img src="{{ 'assets/img/svg/sg_gold.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
+                    </a>
+                </div>
+				<div class="col-md-4">
+                    <a>
+                        <img src="{{ 'assets/img/svg/vi-har-laerling.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
                     </a>
                 </div>
             </div>
