--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="{{ post.cardImg }}">
+                            <img class="card-img-top" src="{{ post.cardImg }}" style="width:100%;height: auto;">
                             <a href="{{ post.url }}">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
