added favicon, removed fade in and changed background color

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,10 @@
-<div class="container-fluid mdb-color py-4 darken-4 text-white">
+<div class="container-fluid py-4">
     <div class="container">
         <section id="about">
-                <div class="row wow fadeIn">
+                <div class="row">
                     <div class="col-lg-12">
 				        <h3 class="h3 text-center">Om oss</h3>
+						<hr>
 			         </div>
                     <div class="col-lg-12">
 				        <p class="text-center">{{ content }}</p>
