--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,7 @@
     <header>
-        <nav class="navbar navbar-static-top navbar-expand-lg navbar-dark white orange darken-4 scrolling-navbar">
+        <nav class="navbar navbar-static-top navbar-expand-lg navbar-light disen-bygg-color scrolling-navbar">
             <div class="container">
-                <a class="navbar-brand waves-effect" href="{{ '/#page-top' | relative_url }}">
-                    <i class="fac fa-disen-bygg" style="height: 48px"></i>
-                </a>
+				<img src="{{ 'assets/img/svg/disen-bygg.svg' | relative_url }}" style="height: 48px;"/>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -18,7 +16,7 @@
                             <a class="nav-link waves-effect" href="{{ '/#projects' | relative_url }}">Prosjekter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="#contact">Kontakt</a>
+                            <a class="nav-link waves-effect" href="{{ '/#contact' | relative_url }}">Kontakt</a>
                         </li>
                     </ul>
                 </div>
