--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,3 +50,11 @@ body,
 .page-footer {
   background-color: #1C2331;
 }
+
+.disen-bygg-color {
+  background-color: #b5b0ad !important;
+}
+
+.disen-bygg-color.inverted {
+  background-color: #4a4f52 !important;
+}
