--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,29 +1,31 @@
-<div class="container-fluid mdb-color py-4 darken-4 text-white">
+<div class="container-fluid py-4">
     <div class="container">
         <section id="contact">
-            <div class="row wow fadeIn">
+            <div class="row">
                 <div class="col-lg-12">
                     <h3 class="h3 text-center">Kontakt</h3>
                     <hr>
                 </div>
             </div>
-            <div class="row wow fadeIn">
+            <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
-                    <a href="tel: {{ site.phone }}" style="color: white;">
+                    <a href="tel: {{ site.phone }}" style="color: black;">
                         <i class="fas fa-phone" style="font-size: 48px;"></i>
                     </a>
                     <br>
                     <p style="padding-top: 10px;">{{ site.phone }}</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
-                    <a href="mailto: {{ site.email }}" style="color: white;">
+                    <a href="mailto: {{ site.email }}" style="color: black;">
                         <i class="fas fa-envelope" style="font-size: 48px;"></i>
                     </a>
                     <br>
                     <p style="padding-top: 10px;">{{ site.email }}</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
-                    <i class="fas fa-map-marker-alt" style="font-size: 48px;"></i>
+					<a href="{{ site.google_maps_link }}" style="color: black;">
+                        <i class="fas fa-map-marker-alt" style="font-size: 48px;"></i>
+                    </a>
                     <br>
                     <p style="padding-top: 10px;">{{ site.address }}</p>
                 </div>
