--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,26 @@
-<footer class="page-footer text-center wow fadeIn">
-    <div class="container-fluid py-4 white">
+<footer class="page-footer text-center">
+    <div class="container-fluid py-4 disen-bygg-color">
         <div class="container">
-            <div class="row wow fadeIn">
+            <div class="row">
                 <div class="col-md-4">
-                    <a>
+                    <a href="https://www.mesterbrev.no/">
                         <img src="{{ '/assets/img/svg/byggmester.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a>
+                    <a href="https://dibk.no/sentral-godkjenning/hva-er-sentral-godkjenning/">
                         <img src="{{ 'assets/img/svg/sg_gold.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
                     </a>
                 </div>
 				<div class="col-md-4">
-                    <a>
+                    <a href="https://nlr.udir.no/">
                         <img src="{{ 'assets/img/svg/vi-har-laerling.svg' | relative_url }}" style="height: 128px; margin: 10px 10px 10px 10px;"/>
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer-copyright py-3 mdb-color darken-4 font-small text-white">
+    <div class="footer-copyright py-3 font-small black">
         &copy; 20{{ site.time | date: '%y' }} {{ site.legalName }} | Org.nr {{ site.orgNr }}
     </div>
 </footer>
