--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,12 +1,13 @@
-<div class="container-fluid py-4 white">
+<div class="container-fluid py-4">
     <div class="container">
         <section id="projects">
-            <div class="row wow fadeIn">
+            <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2 text-center">Prosjekter</h2>
+					<hr>
                 </div>
             </div>
-            <div class="row wow fadeIn">
+            <div class="row">
                 {% for post in site.posts %}
                 <div class="col-md-6 py-4">
                     <div class="card">
