added nav link to root on nav brand

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,9 @@
     <header>
         <nav class="navbar navbar-static-top navbar-expand-lg navbar-light disen-bygg-color scrolling-navbar">
             <div class="container">
-				<img src="{{ 'assets/img/svg/disen-bygg.svg' | relative_url }}" style="height: 48px;"/>
+				<a class="navbar-brand" href="/">
+					<img src="{{ 'assets/img/svg/disen-bygg.svg' | relative_url }}" style="height: 48px;"/>
+				</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
