added header image and moved pages to use layout

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,16 +12,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-                            <a class="nav-link waves-effect" href="{{ '/#about' | relative_url }}">Om oss</a>
+                            <a class="nav-link waves-effect" href="{{ '/about' | relative_url }}"><strong>Om oss</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="{{ '/#projects' | relative_url }}">Prosjekter</a>
+                            <a class="nav-link waves-effect" href="{{ '/projects' | relative_url }}"><strong>Prosjekter</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="{{ '/#contact' | relative_url }}">Kontakt</a>
+                            <a class="nav-link waves-effect" href="{{ '/contact' | relative_url }}"><strong>Kontakt</strong></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+		<section>
+			<div class="">
+				<img src="{{ 'assets/img/header.jpg' | relative_url }}" style="width: 100%; height: 100%;"/>
+			</div>
+		</section>
     </header>
