--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="google-site-verification" content="akysVuvDRjSyKqAOB3VVbQSYLY2CJLvH6GGtFmXYLq4" />
 	<title>{{ site.title }}</title>
     <link href="{{ '/assets/css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
     <link href="{{ '/assets/css/mdb.min.css' | relative_url }}" rel="stylesheet">
